Bug 152077 - Calc freeze when you draw a line inside the chart
Summary: Calc freeze when you draw a line inside the chart
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All Linux (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisected, bisected, regression
: 152135 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-11-16 21:39 UTC by raal
Modified: 2024-01-30 06:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (16.17 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-11-16 21:40 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2022-11-16 21:39:59 UTC
Description:
Repro with Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cfc8a8f5d841b3f84d207196153be67da7f60652
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Steps to Reproduce:
create chart or open file with chart
double click chart
with drawing tools write line 
click outside the chart

Actual Results:
freeze

Expected Results:
insert line


Reproducible: Always


User Profile Reset: No

Additional Info:
.
Comment 1 raal 2022-11-16 21:40:17 UTC
Created attachment 183634 [details]
test file
Comment 2 raal 2022-11-16 21:42:14 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks

from this commit LO crash c884494ef45c522634931f2292c3771128b23be5 is the first bad commit
commit c884494ef45c522634931f2292c3771128b23be5
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Jan 21 14:05:36 2022 +0100

    source 4304947164bbcd3fea758df491a730b01d578be2

https://gerrit.libreoffice.org/c/core/+/128723

freeze then 2a2cb4930dcdbda3105722f1e634725cc29877a0 is the first bad commit
commit 2a2cb4930dcdbda3105722f1e634725cc29877a0
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Jan 26 19:55:41 2022 +0100

    source 385bd85b20b9efff981e7e5cd063a01d39e1e45a

https://git.libreoffice.org/core/+/385bd85b20b9efff981e7e5cd063a01d39e1e45a
Comment 3 Stéphane Guillou (stragu) 2022-11-17 00:42:36 UTC
Reproduced with:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5b0a6621858b141022743dd8d500558895dedb1f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2022-11-22 13:24:29 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8f46b6d847e8dc9f3bea44d0bd76f517c1e54163

tdf#152077 Calc freeze when you draw a line inside the chart

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Stéphane Guillou (stragu) 2022-11-28 13:04:00 UTC
verified fixed in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1fd42472e2b1a2169d56e62ef11aa7ee1f7815e7
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Noel!

Could we please get it approved for cherry pick into 7.4 ? I believe you are a reviewer: https://gerrit.libreoffice.org/c/core/+/143283
Comment 6 Stéphane Guillou (stragu) 2022-11-28 13:09:26 UTC
*** Bug 152135 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2022-12-03 14:01:44 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/dac1ad8a991c51bddcb87b28063b20cf4ed87dbe

tdf#152077 Calc freeze when you draw a line inside the chart

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.