tdf#152077 Calc freeze when you draw a line inside the chart

Change-Id: Ia047352033780c658aa7244cb8568392cf23baac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143103
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>